# commitlint-rs

./: Cargo.toml  Dockerfile
.github/: dependabot.yaml
.github/workflows/: bump.yaml  ci.yaml  lint.yaml  release.yaml
cli/: Cargo.toml
cli/src/: args.rs
cli/src/rule/: scope.rs  type.rs
schema/: Cargo.toml
web/: astro.config.mjs  package-lock.json  package.json
